@@ -1,3 +1,9 @@
+2005-05-19  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b18)
+
+	* GR now sets user-agent and referer to fetch pictures, to comply
+	  with elevated G2 security when using Block hotlinked items in the
+	  URL Rewrite module.
+
 2005-05-04  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b17)
 
 	* GR and the GR applets are now able to run slideshows of G2
